# VORq--Vectorized-Ontology-for-Risk-Quantification

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
colab/: 01_train_event_extractor.ipynb  02_tvp_var_training.ipynb  03_agent_based_simulation.ipynb  04_bayesian_network_learning.ipynb  README.md
colab/vorq_model 2/: config.json
colab/vorq_model_output/best_model/: label_map.json
colab/vorq_model_output/checkpoints/checkpoint-40/: trainer_state.json
notebooks/: 01_knowledge_base.ipynb  02_engine_core.ipynb  03_api_server.ipynb  04_ui_launcher.ipynb
scripts/: download_models.sh
tests/: test_api.py  test_bayesian.py  test_causal_model.py  test_event_extractor.py  test_knowledge_graph.py  test_validation.py
vorq/api/: main.py  vorq_knowledge_graph.json
vorq/colab/: generate_graph.py  vorq_training.ipynb
vorq/data/: fred_cache.json  fred_client.py  prediction_log.json
vorq/data/kb/: seed_knowledge_base.json  trade_dependencies.json
vorq/data/seed/: knowledge_base.json
vorq/engine/: __init__.py  bayesian_scenarios.py  causal_model.py  event_extractor.py  validation.py
vorq/ui/: app.py
