[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vorq"
version = "0.1.0"
description = "Explainable Global Risk Map AI — query-driven geopolitical & supply-chain simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.31.0",
    "spacy>=3.7.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "httpx>=0.26.0",
    "feedparser>=6.0.0",
    "pydantic>=2.5.0",
    "plotly>=5.18.0",
    "pydeck>=0.8.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
colab = [
    "transformers>=4.37.0",
    "torch>=2.1.0",
    "datasets>=2.16.0",
    "accelerate>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vorq*"]
